--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "baileys-whatsapp-api-wrapper",
-  "version": "1.0.0",
-  "description": "Node.js REST API wrapper for Baileys WhatsApp library",
-  "main": "src/index.js",
+  "name": "whatsapp-bot-api",
+  "version": "0.2.0",
+  "description": "WhatsApp API wrapper using Baileys",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node index.js",
+    "api": "node api/server.js"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.20",
+    "@whiskeysockets/baileys": "^6.7.18",
+    "axios": "^1.12.2",
+    "body-parser": "^1.20.2",
     "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "mysql-baileys": "^1.5.4",
-    "mysql2": "^3.15.2",
+    "express": "^4.18.4",
+    "js-yaml": "^4.1.0",
+    "node-fetch": "^2.6.9",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.1.1",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "swagger-ui-express": "^5.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "author": "",
-  "license": "MIT"
+    "swagger-ui-express": "^4.6.3"
+  }
 }
