--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.4",
     "js-yaml": "^4.1.0",
+    "mysql2": "^3.15.3",
     "node-fetch": "^2.6.9",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
